# CPSC5450_GroupProject

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  parser.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  parser.py  worker.py
backend/app/api/: main.py
backend/app/api/routes/: audit.py  email.py  login.py  users.py
backend/app/core/: config.py  db.py
backend/app/email_data/parsed/: 9372cb7a-e775-4000-a981-8b46cd134c19.json
backend/app/email_data/synthetic_test_pool/: 0000_benign.eml  0001_phishing.eml  0002_benign.eml  0003_benign.eml  0004_benign.eml  0005_phishing.eml  0006_benign.eml  0007_phishing.eml  0008_phishing.eml  0009_phishing.eml  0010_benign.eml  0011_benign.eml  0012_phishing.eml  0013_phishing.eml  0014_benign.eml  0015_phishing.eml  0016_phishing.eml  0017_benign.eml  0018_benign.eml  0019_benign.eml  0020_benign.eml  0021_benign.eml  0022_benign.eml  0023_benign.eml  0024_phishing.eml  0025_phishing.eml  0026_phishing.eml  0027_phishing.eml  0028_phishing.eml  0029_phishing.eml  0030_benign.eml  0031_benign.eml  0032_benign.eml  0033_benign.eml  0034_benign.eml  0035_benign.eml  0036_phishing.eml  (+463 more)
backend/app/input/: UTC ACM's First Meeting of the Semester!.eml
backend/app/models/: __init__.py  audit.py  email.py
backend/app/schema/: email_schema.json
backend/app/scripts/: lint.sh
backend/app/services/: email_filesystem.py  email_parser.py  email_processing.py  email_storage.py  job_status.py  triage.py
backend/app/tasks/: email_tasks.py  tasks.py  worker.py
(+48 files in other folders)
