[project]
name = "app"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "jsonschema>=4.26.0",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=0.19.1",
    "prek>=0.3.0",
    "ruff>=0.14.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
